Fully disengaged s3service from MediaController